--- a/smartcontract/package.json
+++ b/smartcontract/package.json
@@ -11,6 +11,17 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.6"
+    "hardhat": "^2.22.6",
+    "@semaphore-protocol/contracts": "^2.6.1",
+    "@zk-shuffle/circuits": "1.0.0",
+    "@zk-shuffle/jssdk": "1.0.0",
+    "@zk-shuffle/proof": "1.0.0",
+    "circomlibjs": "^0.1.7",
+    "node-pandoc": "^0.3.0",
+    "snarkjs": "^0.7.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
+    "@zk-shuffle/contracts": "^1.0.1"
   }
 }
