--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,34 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@headlessui/react": "latest",
+    "@heroicons/react": "latest",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-spring/web": "latest",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/container-queries": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
+    "bs58": "^6.0.0",
     "class-variance-authority": "^0.4.0",
+    "classnames": "latest",
     "clsx": "^1.2.1",
     "ethers": "^6.13.2",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
+    "pino-pretty": "^11.2.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
+    "swr": "^2.2.5",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "thirdweb": "^5.45.1",
+    "use-local-storage-state": "^19.4.0",
+    "utf-8-validate": "^6.0.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
