--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "latest",
     "@heroicons/react": "latest",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-spring/web": "latest",
     "@tailwindcss/aspect-ratio": "latest",
@@ -58,6 +59,6 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.5.4"
   }
 }
